fix "receive funds" icon being too small

--- a/src/less/nault-theme.less
+++ b/src/less/nault-theme.less
@@ -561,6 +561,11 @@ input[type=number] {
 				margin-right: 13px;
 			}
 
+			&.icon-download {
+				margin-left: -2px;
+				margin-right: 12px;
+			}
+
 			> .icon-inner {
 				position: absolute;
 				left: 50%;
